# artecshpp

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
doc/: SPECS.md  entityProcess.graphml  flow.graphml  general.graphml  strategies.graphml  sysreqs.graphml  sysreqs.md  usecases.graphml
src/: CMakeLists.txt
src/lib/: componentmanager.h  componenttraits.cpp  componenttraits.h  engine.cpp  main.cpp
src/lib/artecshpp/core/: aspect.cpp  aspect.h  component.cpp  component.h  componentmanager.cpp  componentmanager.h  componenttraits.cpp  componenttraits.h  config.h  engine.cpp  engine.h  entity.cpp  entity.h  entitysystem.cpp  entitysystem.h  ientitylistener.cpp  ientitylistener.h  memory.h  system.cpp  system.h
src/test/: main.cpp  testcxx.cpp  testcxx_original.cpp  trollasert.h  tst-aspect.cpp  tst-views.cpp  viewtest.cpp
